refactor main project

--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -86,23 +86,30 @@
     <Compile Include="PicklerBase\PickleFormat.fs" />
     <Compile Include="PicklerBase\Pickler.fsi" />
     <Compile Include="PicklerBase\Pickler.fs" />
-    <Compile Include="PicklerBase\PrimitivePicklers.fs" />
     <Compile Include="PicklerBase\CompositePickler.fs" />
-    <Compile Include="PicklerBase\ArrayPicklers.fs" />
+    <Compile Include="PicklerBase\PrimitivePicklers.fs" />
     <Compile Include="PicklerBase\ReflectionPicklers.fs" />
-    <Compile Include="PicklerBase\RootSerialization.fs" />
+    <Compile Include="Combinators\Sequence.fs" />
+    <Compile Include="Combinators\Array.fs" />
+    <Compile Include="Combinators\Tuple.fs" />
+    <Compile Include="Combinators\FSharpList.fs" />
+    <Compile Include="Combinators\DotNetTypes.fs" />
+    <Compile Include="Combinators\FSharpTypes.fs" />
+    <Compile Include="Combinators\Collections.fs" />
+    <Compile Include="Combinators\Wrappers.fs" />
     <Compile Include="PicklerGeneration\TypeShape.fs" />
     <Compile Include="PicklerGeneration\PicklerEmit.fs" />
-    <Compile Include="PicklerGeneration\DotNetPicklers.fs" />
-    <Compile Include="PicklerGeneration\TuplePicklers.fs" />
-    <Compile Include="PicklerGeneration\FSharpPicklers.fs" />
-    <Compile Include="PicklerGeneration\GenericPicklers.fs" />
+    <Compile Include="PicklerGeneration\FieldPicklerGen.fs" />
+    <Compile Include="PicklerGeneration\ISerializableGen.fs" />
+    <Compile Include="PicklerGeneration\FSharpTypeGen.fs" />
+    <Compile Include="PicklerGeneration\CustomPickler.fs" />
     <Compile Include="PicklerGeneration\PicklerFactory.fs" />
     <Compile Include="PicklerGeneration\PicklerResolution.fs" />
     <Compile Include="PicklerGeneration\PicklerCache.fs" />
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="Format\NullFormat.fs" />
+    <Compile Include="FsPickler\RootSerialization.fs" />
     <Compile Include="FsPickler\BasePickler.fs" />
     <Compile Include="FsPickler\TextPickler.fs" />
     <Compile Include="FsPickler\BinaryPickler.fs" />
