--- a/nuget/FsPickler.Json.nuspec
+++ b/nuget/FsPickler.Json.nuspec
@@ -20,5 +20,8 @@
       <file src="..\bin\FsPickler.Json.dll" target="lib/net45" />
       <file src="..\bin\FsPickler.Json.xml" target="lib/net45" />
       <file src="..\bin\FsPickler.Json.pdb" target="lib/net45" />
+      <file src="..\bin\net40\FsPickler.Json.dll" target="lib/net40" />
+      <file src="..\bin\net40\FsPickler.Json.xml" target="lib/net40" />
+      <file src="..\bin\net40\FsPickler.Json.pdb" target="lib/net40" />
     </files>
 </package>
