--- a/nuget/FsPickler.nuspec
+++ b/nuget/FsPickler.nuspec
@@ -20,5 +20,8 @@
       <file src="..\bin\FsPickler.dll" target="lib/net45" />
       <file src="..\bin\FsPickler.xml" target="lib/net45" />
       <file src="..\bin\FsPickler.pdb" target="lib/net45" />
+      <file src="..\bin\net40\FsPickler.dll" target="lib/net40" />
+      <file src="..\bin\net40\FsPickler.xml" target="lib/net40" />
+      <file src="..\bin\net40\FsPickler.pdb" target="lib/net40" />
     </files>
 </package>
