--- a/tests/FsPickler.Tests/packages.config
+++ b/tests/FsPickler.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FsCheck" version="0.9.4.0" targetFramework="net45" />
   <package id="FsUnit" version="1.2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
 </packages>
