--- a/src/FsPickler.Json/FsPickler.Json.fsproj
+++ b/src/FsPickler.Json/FsPickler.Json.fsproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>1dcb4ad7-2c00-4bcd-b1a5-a469f31e2cd1</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>FsPickler.Json</RootNamespace>
+    <RootNamespace>Nessos.FsPickler.Json</RootNamespace>
     <AssemblyName>FsPickler.Json</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
