--- a/src/FsPickler.CSharp/packages.config
+++ b/src/FsPickler.CSharp/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core.Microsoft.Signed" version="0.0.1-beta1" targetFramework="net45" />
+  <package id="FSharp.Core.3" version="0.0.2" targetFramework="net45" />
 </packages>
