--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -93,15 +93,15 @@
     <Compile Include="Utils\Reflection.fs" />
     <Compile Include="Utils\ShallowCopy.fs" />
     <Compile Include="Utils\Hashing.fs" />
-    <Compile Include="PicklerBase\Types.fs" />
-    <Compile Include="PicklerBase\PickleFormat.fs" />
-    <Compile Include="PicklerBase\ReflectionCache.fs" />
-    <Compile Include="PicklerBase\Pickler.fsi" />
-    <Compile Include="PicklerBase\Pickler.fs" />
-    <Compile Include="PicklerBase\PrimitivePicklers.fs" />
-    <Compile Include="PicklerBase\CompositePickler.fs" />
-    <Compile Include="PicklerBase\UnionCaseHelper.fs" />
-    <Compile Include="PicklerBase\ReflectionPicklers.fs" />
+    <Compile Include="Pickler\Types.fs" />
+    <Compile Include="Pickler\PickleFormat.fs" />
+    <Compile Include="Pickler\ReflectionCache.fs" />
+    <Compile Include="Pickler\Pickler.fsi" />
+    <Compile Include="Pickler\Pickler.fs" />
+    <Compile Include="Pickler\PrimitivePicklers.fs" />
+    <Compile Include="Pickler\CompositePickler.fs" />
+    <Compile Include="Pickler\UnionCaseHelper.fs" />
+    <Compile Include="Pickler\ReflectionPicklers.fs" />
     <Compile Include="Combinators\Wrappers.fs" />
     <Compile Include="Combinators\Sequence.fs" />
     <Compile Include="Combinators\Array.fs" />
@@ -123,8 +123,8 @@
     <Compile Include="Format\XmlFormat.fs" />
     <Compile Include="Format\NullFormat.fs" />
     <Compile Include="FsPickler\RootSerialization.fs" />
-    <Compile Include="FsPickler\BasePickler.fs" />
-    <Compile Include="FsPickler\TextPickler.fs" />
+    <Compile Include="FsPickler\FsPicklerBase.fs" />
+    <Compile Include="FsPickler\FsPicklerText.fs" />
     <Compile Include="FsPickler\BinaryPickler.fs" />
     <Compile Include="FsPickler\XmlPickler.fs" />
     <Compile Include="FsPickler\FsPickler.fs" />
