--- a/src/FsPickler.CSharp/FsPickler.CSharp.csproj
+++ b/src/FsPickler.CSharp/FsPickler.CSharp.csproj
@@ -58,13 +58,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasePickler.cs" />
+    <Compile Include="CsPicklerBase.cs" />
     <Compile Include="Formats\BinaryPickler.cs" />
     <Compile Include="CsPickler.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Formats\JsonPickler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextPickler.cs" />
+    <Compile Include="CsPicklerText.cs" />
     <Compile Include="Formats\XmlPickler.cs" />
   </ItemGroup>
   <ItemGroup>
