--- a/nuget/FsPickler.nuspec
+++ b/nuget/FsPickler.nuspec
@@ -16,12 +16,5 @@
       <tags>@tags@</tags>
       @dependencies@
     </metadata>
-    <files>
-      <file src="..\bin\FsPickler.dll" target="lib/net45" />
-      <file src="..\bin\FsPickler.xml" target="lib/net45" />
-      <file src="..\bin\FsPickler.pdb" target="lib/net45" />
-      <file src="..\bin\net40\FsPickler.dll" target="lib/net40" />
-      <file src="..\bin\net40\FsPickler.xml" target="lib/net40" />
-      <file src="..\bin\net40\FsPickler.pdb" target="lib/net40" />
-    </files>
+    @files@
 </package>
