--- a/tests/FsPickler.PerfTests/FsPickler.PerfTests.fsproj
+++ b/tests/FsPickler.PerfTests/FsPickler.PerfTests.fsproj
@@ -60,9 +60,11 @@
   <ItemGroup>
     <Compile Include="Serializers.fs" />
     <Compile Include="TestTypes.fs" />
+    <Compile Include="SerializationSize.fs" />
     <Compile Include="PerformanceTests.fs" />
     <Compile Include="PerformanceTesters.fs" />
     <None Include="perfTests.fsx" />
+    <None Include="sizeTests.fsx" />
     <Content Include="fspPerf.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -104,8 +106,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <ProjectReference Include="..\..\src\FsPickler.Json\FsPickler.Json.fsproj">
       <Name>FsPickler.Json</Name>
