implement EDI serialization

--- a/tests/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/tests/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -55,6 +55,17 @@
     <Prefer32Bit>true</Prefer32Bit>
     <OutputPath>..\..\bin\NoEmit\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-NET40|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <Tailcalls>true</Tailcalls>
+    <DefineConstants>TRACE;NET40</DefineConstants>
+    <WarningLevel>3</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DocumentationFile />
+    <Prefer32Bit>true</Prefer32Bit>
+    <OutputPath>bin\Release-NET40\</OutputPath>
+  </PropertyGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '11.0'">
       <PropertyGroup Condition="Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')">
