separate Cloning unit tests from serializer unit tests; add more cloning unit tests

--- a/tests/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/tests/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -85,7 +85,8 @@
     <Compile Include="IPickler.fs" />
     <Compile Include="FsPicklerManager.fs" />
     <Compile Include="TestTypes.fs" />
-    <Compile Include="FsPicklerTests.fs" />
+    <Compile Include="GenericTests.fs" />
+    <Compile Include="SerializerTests.fs" />
     <Compile Include="InMemoryTests.fs" />
     <Compile Include="AppDomainTests.fs" />
     <None Include="paket.references" />
