visitor initial commit

--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -97,7 +97,7 @@
     <Compile Include="Pickler\Types.fs" />
     <Compile Include="Pickler\PickleFormat.fs" />
     <Compile Include="Pickler\ReflectionCache.fs" />
-    <Compile Include="Pickler\Pickler.fsi" />
+    <None Include="Pickler\Pickler.fsi" />
     <Compile Include="Pickler\Pickler.fs" />
     <Compile Include="Pickler\PrimitivePicklers.fs" />
     <Compile Include="Pickler\CompositePickler.fs" />
@@ -123,7 +123,6 @@
     <Compile Include="PicklerGeneration\PicklerCache.fs" />
     <Compile Include="Format\BinaryFormat.fs" />
     <Compile Include="Format\XmlFormat.fs" />
-    <Compile Include="Format\NullFormat.fs" />
     <Compile Include="FsPickler\RootSerialization.fs" />
     <Compile Include="FsPickler\Serializer.fs" />
     <Compile Include="FsPickler\TextSerializer.fs" />
