--- a/src/FsPickler.Json/FsPickler.Json.fsproj
+++ b/src/FsPickler.Json/FsPickler.Json.fsproj
@@ -90,6 +90,7 @@
     <Compile Include="Combinators.fs" />
     <None Include="Test.fsx" />
     <Content Include="paket.references" />
+    <None Include="Paket.template" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
