--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -132,7 +132,7 @@
     <Compile Include="FsPickler\FsPickler.fs" />
     <Compile Include="FsPickler\Combinators.fs" />
     <Compile Include="FsPickler\ExtensionMethods.fs" />
-    <None Include="Paket.template" />
+    <None Include="paket.template" />
     <None Include="Test.fsx" />
   </ItemGroup>
   <ItemGroup>
