build unit tests

--- a/tests/FsPickler.PerfTests/FsPickler.PerfTests.fsproj
+++ b/tests/FsPickler.PerfTests/FsPickler.PerfTests.fsproj
@@ -45,6 +45,24 @@
     <DocumentationFile>..\..\bin\NoEmit\FsPickler.PerfTests.XML</DocumentationFile>
     <OutputPath>..\..\bin\NoEmit</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-NET35|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <Tailcalls>true</Tailcalls>
+    <DefineConstants>TRACE</DefineConstants>
+    <WarningLevel>3</WarningLevel>
+    <DocumentationFile>..\..\bin\FsPickler.PerfTests.XML</DocumentationFile>
+    <OutputPath>bin\Release-NET35\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-NET40|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <Tailcalls>true</Tailcalls>
+    <DefineConstants>TRACE</DefineConstants>
+    <WarningLevel>3</WarningLevel>
+    <DocumentationFile>..\..\bin\FsPickler.PerfTests.XML</DocumentationFile>
+    <OutputPath>bin\Release-NET40\</OutputPath>
+  </PropertyGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '11.0'">
       <PropertyGroup Condition="Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')">
