--- a/src/FsPickler/paket.template
+++ b/src/FsPickler/paket.template
@@ -24,6 +24,8 @@ tags
 frameworkAssemblies
     System.Runtime.Serialization
     System.Xml
+references
+	FsPickler.dll
 files
     ../../bin/FsPickler.dll ==> lib/net45
     ../../bin/FsPickler.pdb ==> lib/net45
@@ -31,3 +33,7 @@ files
     ../../bin/net40/FsPickler.dll ==> lib/net40
     ../../bin/net40/FsPickler.pdb ==> lib/net40
     ../../bin/net40/FsPickler.xml ==> lib/net40
+	../../bin/net35/System.Threading.dll ==> lib/net35
+    ../../bin/net35/FsPickler.dll ==> lib/net35
+    ../../bin/net35/FsPickler.pdb ==> lib/net35
+    ../../bin/net35/FsPickler.xml ==> lib/net35
